# api/src/api/merchs/merchs.controller.ts
@@ -1,4 +1,16 @@
-import { Controller } from '@nestjs/common';
+import { Controller, Get } from '@nestjs/common';
+import { ApiHeader, ApiTags } from '@nestjs/swagger';
 
-@Controller('merchs')
-export class MerchsController {}
+@Controller('shops/:shopId/merchs')
+@ApiTags('Merch / マーチ')
+@ApiHeader({
+  name: 'x-user-id',
+  description: '認証モジュールを実装したら代わりにAuthorizationヘッダーにトークンを載せて送ってもらう予定',
+  example: 1,
+})
+export class MerchsController {
+  @Get()
+  async findAll() {
+    return 'test';
+  }
+}
